--- a/projects/petgraph-g6/Cargo.toml
+++ b/projects/petgraph-g6/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "g6"
+name = "petgraph-g6"
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "graph6 import"
