--- a/projects/petgraph-g6/Cargo.toml
+++ b/projects/petgraph-g6/Cargo.toml
@@ -13,6 +13,10 @@ exclude = ["package.json", "tests/**"]
 [dependencies]
 petgraph = "0.6.3"
 
+[dependencies.g6]
+version = "0.0.1"
+path = "../g6"
+
 [dev-dependencies]
 
 [features]
