--- a/projects/g6/Cargo.toml
+++ b/projects/g6/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "g6"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Aster <192607617@qq.com>"]
 description = "graph6 import"
 repository = "https://github.com/oovm/sub_projects"
@@ -11,6 +11,7 @@ edition = "2021"
 exclude = ["package.json", "tests/**"]
 
 [dependencies]
+wolfram_wxf = { version = "0.6.6", optional = true }
 fixedbitset = "0.4.2"
 
 [dev-dependencies]
